[Add] serialization uuid & swagger doc
